--- a/shelter.html
+++ b/shelter.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <section class="main">
         <div class="wrapper">
             <div class="main__nav">
                 <div class="main__nav__logo"><img src="./images/Logo.png" alt="Logo"></div>
@@ -33,7 +33,7 @@
                 <div class="main__container__img"><img src="./images/start-screen-puppy.png" alt="start screen puppy"></div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- ABOUT start section -->
     <div class="about">
