finished layout, created different scss files

--- a/shelter.html
+++ b/shelter.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    
     <section class="main">
         <div class="wrapper">
             <div class="main__nav">
@@ -53,11 +54,138 @@
         </div>
     </div>
     <!-- END -->
-    
-    <div class="carousel"></div>
-    <div class="help"></div>
-    <div class="donation"></div>
-    <div class="footer"></div>
+
+    <div class="carousel">
+        <div class="wrapper">
+            <div class="carousel__title">
+                <h1>Our friends who <br> are looking for a house</h1>
+            </div>
+            <div class="carousel__cards">
+                <div class="carousel__cards__fill">
+                    <img src="./images/pets-katrine.png" alt="cat">
+                    <h3>Kathrine</h3>
+                    <button>Learn more</button>
+                </div>
+                <div class="carousel__cards__fill">
+                    <img src="./images/pets-jennifer.png" alt="dog">
+                    <h3>Jennifer</h3>
+                    <button>Learn more</button>
+                </div>
+                <div class="carousel__cards__fill">
+                    <img src="./images/pets-woody.png" alt="dog">
+                    <h3>Woody</h3>
+                    <button>Learn more</button>
+                </div>
+            </div>
+            <div class="carousel__button">
+                <button>Get to know the rest</button>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="help">
+        <div class="wrapper">
+            <div class="help__title">
+                <h1>How you can help <br> our shelter</h1>
+            </div>
+            <div class="help__icons">
+                <div class="help__icons__first">
+                    <div class="box1">
+                        <img src="./images/icon-pet-food.png" alt="">
+                        <h3>Pet food</h3>
+                    </div>
+                    <div class="box2">
+                        <img src="./images/icon-transportation.png" alt="">
+                        <h3>Transportation</h3>
+                    </div>
+                    <div class="box3">
+                        <img src="./images/icon-toys.png" alt="">
+                        <h3>Toys</h3>
+                    </div>
+                    <div class="box4">
+                        <img src="./images/icon-bowls-and-cups.png" alt="">
+                        <h3>Bowls and cups</h3>
+                    </div>
+                    <div class="box5">
+                        <img src="./images/icon-shampoos.png" alt="">
+                        <h3>Shampoos</h3>
+                    </div>
+                </div>
+                <div class="help__icons__second">
+                    <div class="box6">
+                        <img src="./images/icon-vitamins.png" alt="">
+                        <h3>Vitamins</h3>
+                    </div>
+                    <div class="box7">
+                        <img src="./images/icon-medicines.png" alt="">
+                        <h3>Medicines</h3>
+                    </div>
+                    <div class="box8">
+                        <img src="./images/icon-collars-leashes.png" alt="">
+                        <h3>Collars / leashes</h3>
+                    </div>
+                    <div class="box9">
+                        <img src="./images/icon-sleeping-area.png" alt="">
+                        <h3>Sleeping areas</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="donation">
+        <div class="wrapper">
+            <div class="donation__img">
+                <img src="./images/donation-dog.png" alt="">
+            </div>
+            <div class="donation__text">
+                <h1>You can also <br> make a donation</h1>
+                <p>Name of the bank / Type of bank account</p>
+                    <div class="donation__text__card">
+                        <img src="./images/credit-card.png" alt="">
+                        <h2>8380 2880 8028 8791 7435</h2>
+                    </div>
+                <p class="itallic">
+                    Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer">
+        <div class="container">
+            <div class="footer__text1">
+                <h1 class="h1">For questions and suggestions</h1>
+                <div class="footer__text1__box1">
+                    <img src="./images/icon-email.png" alt="">
+                    <p>email@shelter.com</p>
+                </div>
+                <div class="footer__text1__box2">
+                    <img src="./images/icon-phone.png" alt="">
+                    <p>+13 674 567 75 54</p>
+                </div>
+            </div>
+            <div class="footer__text2">
+                <div class="footer_text2__title">
+                    <h1>We are waiting for your visit</h1>
+                </div>
+                <div class="footer__text2__box1">
+                    <img src="./images/icon-marker.png" alt="">
+                    <p>1 Central Street, Boston (entrance from the store)</p>
+                </div>
+                <div class="footer__text2__box2">
+                    <img src="./images/icon-marker.png" alt="">
+                    <p>18 South Park, London </p>
+                </div>
+            </div>
+            <div class="footer__image">
+                <img src="./images/footer-puppy.png" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
